docs/0.14/_sources/api/gammapy.data.FixedPointingInfo.rst.txt
FixedPointingInfo
=================

.. currentmodule:: gammapy.data

.. autoclass:: FixedPointingInfo
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FixedPointingInfo.altaz
      ~FixedPointingInfo.altaz_frame
      ~FixedPointingInfo.duration
      ~FixedPointingInfo.location
      ~FixedPointingInfo.obstime
      ~FixedPointingInfo.radec
      ~FixedPointingInfo.time_ref
      ~FixedPointingInfo.time_start
      ~FixedPointingInfo.time_stop

   .. rubric:: Methods Summary

   .. autosummary::

      ~FixedPointingInfo.read

   .. rubric:: Attributes Documentation

   .. autoattribute:: altaz
   .. autoattribute:: altaz_frame
   .. autoattribute:: duration
   .. autoattribute:: location
   .. autoattribute:: obstime
   .. autoattribute:: radec
   .. autoattribute:: time_ref
   .. autoattribute:: time_start
   .. autoattribute:: time_stop

   .. rubric:: Methods Documentation

   .. automethod:: read
