docs/0.20.1/_sources/api/gammapy.data.FixedPointingInfo.rst.txt
FixedPointingInfo
=================

.. currentmodule:: gammapy.data

.. autoclass:: FixedPointingInfo
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FixedPointingInfo.altaz
      ~FixedPointingInfo.altaz_frame
      ~FixedPointingInfo.duration
      ~FixedPointingInfo.fixed_altaz
      ~FixedPointingInfo.fixed_icrs
      ~FixedPointingInfo.location
      ~FixedPointingInfo.mode
      ~FixedPointingInfo.obstime
      ~FixedPointingInfo.radec
      ~FixedPointingInfo.time_ref
      ~FixedPointingInfo.time_start
      ~FixedPointingInfo.time_stop

   .. rubric:: Methods Summary

   .. autosummary::

      ~FixedPointingInfo.get_altaz
      ~FixedPointingInfo.get_icrs
      ~FixedPointingInfo.read

   .. rubric:: Attributes Documentation

   .. autoattribute:: altaz
   .. autoattribute:: altaz_frame
   .. autoattribute:: duration
   .. autoattribute:: fixed_altaz
   .. autoattribute:: fixed_icrs
   .. autoattribute:: location
   .. autoattribute:: mode
   .. autoattribute:: obstime
   .. autoattribute:: radec
   .. autoattribute:: time_ref
   .. autoattribute:: time_start
   .. autoattribute:: time_stop

   .. rubric:: Methods Documentation

   .. automethod:: get_altaz
   .. automethod:: get_icrs
   .. automethod:: read
